--- a/POC/Flutter_POC/flutter_poc/pubspec.yaml
+++ b/POC/Flutter_POC/flutter_poc/pubspec.yaml
@@ -31,11 +31,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
+  util_simple_3d: ^4.0.0
+  babylonjs_viewer: ^1.1.0
+  cupertino_icons: ^1.0.2
+  flutter_cube: ^0.1.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+
 
 dev_dependencies:
   flutter_test:
@@ -48,12 +50,16 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
 
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
 flutter:
 
+  assets:
+    - assets/monkeyhead/Monkeyhead.obj
+    - assets/monkeyhead/Monkeyhead.mtl
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
